add upload file

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:2011@localhost:5432/baseprojectnestjs?schema=public"
+DATABASE_URL="postgresql://postgres:20112003@171.254.93.96:5432/searchfilm?schema=public"
 
 JWT_SECRET="20112003"
 JWT_REFRESH_SECRET="04122003"
